--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -693,24 +693,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint, choice\n",
+    "print(randint(1,10))\n",
+    "print(choice(['rock', 'paper', 'scissors']))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dell\\Desktop\\GEN_AI\\python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'shutil_test_2.txt'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## to deal with the high level operation \n",
+    "import shutil\n",
+    "shutil.copyfile('shutil_test_1.txt', 'shutil_test_2.txt')"
+   ]
   },
   {
    "cell_type": "code",
