--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -753,24 +753,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": \"tushar\", \"age\": 22, \"city\": \"uk\"}\n",
+      "<class 'str'>\n",
+      "{'name': 'tushar', 'age': 22, 'city': 'uk'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## data serialization\n",
+    "import json\n",
+    "data = {\"name\" : \"tushar\", \"age\" : 22, \"city\" : \"uk\"} ##dict\n",
+    "\n",
+    "json_data_str = json.dumps(data)\n",
+    "print(json_data_str)\n",
+    "print(type(json_data_str))\n",
+    "\n",
+    "parsed_data = json.loads(json_data_str)\n",
+    "print(parsed_data)\n",
+    "print(type(parsed_data))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'City']\n",
+      "['jatin', '21', 'gau_gavdi']\n",
+      "['kanishk', '22', 'moj_pur chapri']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## working with the csv file\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "with open('example.csv',mode = 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['Name', 'Age', 'City'])\n",
+    "    writer.writerow(['jatin', '21', 'gau_gavdi'])\n",
+    "    writer.writerow(['kanishk', '22', 'moj_pur chapri'])\n",
+    "    \n",
+    "with open('example.csv', mode = 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-24 10:34:46.049781\n",
+      "2024-12-23 10:34:46.049781\n"
+     ]
+    }
+   ],
+   "source": [
+    "## datetime\n",
+    "from datetime import datetime,timedelta\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "\n",
+    "yesterday = now - timedelta(days = 1)\n",
+    "print(yesterday)"
+   ]
   },
   {
    "cell_type": "code",
