--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -836,6 +836,112 @@
     "yesterday = now - timedelta(days = 1)\n",
     "print(yesterday)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name,Age,City\n",
+      "jatin,21,gau_gavdi\n",
+      "kanishk,22,moj_pur chapri\n",
+      "\n",
+      "This is a new line\n",
+      "Name,Age,City\n",
+      "jatin,21,gau_gavdi\n",
+      "kanishk,22,moj_pur chapri\n",
+      "\n",
+      "This is a new line\n",
+      "Name,Age,City\n",
+      "jatin,21,gau_gavdi\n",
+      "kanishk,22,moj_pur chapri\n",
+      "\n",
+      "This is a new line\n",
+      "This is a new line\n"
+     ]
+    }
+   ],
+   "source": [
+    "## reading whole file\n",
+    "with open('example.csv', mode= 'r') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)\n",
+    "    \n",
+    "    \n",
+    "## reading file line by line\n",
+    "with open('example.csv', mode= 'r') as file:\n",
+    "    for line in file:\n",
+    "        print(line.strip())\n",
+    "        \n",
+    "## appending data to a file\n",
+    "with open('example.csv', mode= 'a') as file:\n",
+    "    file.write('\\nThis is a new line')\n",
+    "with open('example.csv', mode= 'r') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## adding multi lines to the file using 'a' mode & writelines\n",
+    "corpus = [\n",
+    "    'first line \\n',\n",
+    "    'second line \\n',\n",
+    "    'third line \\n'\n",
+    "]\n",
+    "\n",
+    "with open('example.csv',mode='a')as file:\n",
+    "    file.writelines(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## copying a file to another\n",
+    "with open('example.csv',mode='r') as source_file:\n",
+    "    content = source_file.read()\n",
+    "with open('destination_copied.csv', mode='w') as destination_file:\n",
+    "    destination_file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
