--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -924,6 +924,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines :8, words :19. char :134\n"
+     ]
+    }
+   ],
+   "source": [
+    "## count the number of lines,words and char in given file\n",
+    "\n",
+    "def count_lines_words_chars(filename):\n",
+    "    with open(filename,'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        line_count = len(lines)\n",
+    "        word_count = sum(len(line.split()) for line in lines)\n",
+    "        char_count = sum(len(line) for line in lines)\n",
+    "        return line_count,word_count,char_count\n",
+    "    \n",
+    "filename = 'example.csv'\n",
+    "line_count,word_count,char_count = count_lines_words_chars(filename)\n",
+    "print(f'lines :{line_count}, words :{word_count}. char :{char_count}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dell\\Desktop\\GEN_AI\\python\\folder\\file.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "dir_name = \"folder\"\n",
+    "file_name = \"file.txt\"\n",
+    "full_path = os.path.join(os.getcwd(),dir_name, file_name)\n",
+    "print(full_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # types of error: EXCEPTION HANDLING\n",
+    "    # *  NameError\n",
+    "    # *  TypeError\n",
+    "    # *  ZeroDivisionError\n",
+    "    # *  IndexError\n",
+    "    # *  KeyError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'b' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "## exception handling\n",
+    "try:\n",
+    "    a=b\n",
+    "except NameError as ex:\n",
+    "    print(ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n",
+      "denominator cann't be 0, please change the deno.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    ans = 1/0\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(e) \n",
+    "    print(\"denominator cann't be 0, please change the deno.\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Exception is the class from which every exception occurs\n",
+    "try:\n",
+    "    a=2\n",
+    "    ans = 1/0 + 56\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is: 0.5\n",
+      "This block is always executed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## try, except, else and finally block\n",
+    "try:\n",
+    "    num = int(input(\"Enter a number: \"))\n",
+    "    result = num / 10\n",
+    "except ValueError:\n",
+    "    print(\"Invalid input. Please enter a valid number.\")\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "else:\n",
+    "    print(\"The sum is:\", result)\n",
+    "finally:\n",
+    "    print(\"This block is always executed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
