--- a/python/test2.ipynb
+++ b/python/test2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,17 @@
     "        \n",
     "    def deposit(self, amount):\n",
     "        self.balance += amount\n",
+    "        print(f\"Amount deposited successfully and balance is {self.balance}\")\n",
     "        \n",
     "    def withdraw(self, amount):\n",
     "        if self.balance >= amount:\n",
     "            self.balance -= amount\n",
     "        else:\n",
     "            print(\"Insufficient balance\")\n",
+    "        print(f\"Amount withdrawn successfully and balance is {self.balance}\")\n",
+    "        \n",
+    "    def get_balance(self):\n",
+    "        print(f\"Balance is {self.balance}\")\n",
     "            \n",
     "customer_1 = BankAccount(\"Dhruv\", 22, 1231, 10000)\n",
     "customer_2 = BankAccount(\"gaurav\", 23, 1232, 20000)\n",
