--- a/python/test2.ipynb
+++ b/python/test2.ipynb
@@ -155,10 +155,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "barks\n",
+      "meows\n",
+      "barks\n"
+     ]
+    }
+   ],
+   "source": [
+    "## polymorphism\n",
+    "## method overriding\n",
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        return \"sounds of an animals\"\n",
+    "    \n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"barks\"\n",
+    "    \n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"meows\"\n",
+    "    \n",
+    "def animal_sound(animal):\n",
+    "    return animal.speak()\n",
+    "\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "\n",
+    "print(dog.speak())\n",
+    "print(cat.speak())\n",
+    "\n",
+    "print(animal_sound(dog))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of rectangle: 50\n",
+      "Area of circle:  153.93804002589985\n"
+     ]
+    }
+   ],
+   "source": [
+    "## polymorphism using methods or func()\n",
+    "from math import pi\n",
+    "class Shape:\n",
+    "    def area(self):\n",
+    "        return \"the area of the figure\"\n",
+    "    \n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "    \n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return pi * self.radius * self.radius\n",
+    "    \n",
+    "def calculate_area(shape):\n",
+    "    return shape.area()\n",
+    "\n",
+    "reactangle = Rectangle(5, 10)\n",
+    "circle = Circle(7)\n",
+    "\n",
+    "print(\"Area of rectangle:\", calculate_area(reactangle))\n",
+    "print(\"Area of circle: \", calculate_area(circle))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car engine started\n"
+     ]
+    }
+   ],
+   "source": [
+    "## polymorphism using the abstract class\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class vechicle(ABC):\n",
+    "    @abstractmethod\n",
+    "    def start_engine(self):\n",
+    "        pass\n",
+    "    \n",
+    "class Car(vechicle):\n",
+    "    def start_engine(self):\n",
+    "        return (\"car engine started\")\n",
+    "        \n",
+    "class Motorcycle(vechicle):\n",
+    "    def start_engine(self):\n",
+    "        return (\"motorcycle engine started\")\n",
+    "    \n",
+    "    \n",
+    "car = Car()\n",
+    "motorcycle = Motorcycle()   \n",
+    "\n",
+    "print(car.start_engine())"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,31 +294,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gavin\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Encapsulation : getter & setter methods\n",
+    "## public, private & protected access modifiers\n",
+    "\n",
+    "class Customer:\n",
+    "    def __init__(self, cust_id, name, age, wallet_balance):\n",
+    "        self.__cust_id = cust_id ##private variable\n",
+    "        self.name = name ##public variable\n",
+    "        self.age = age\n",
+    "        self._wallet_balance = wallet_balance ## protected variable\n",
+    "\n",
+    "    def update_balance(self, amount):\n",
+    "        self.wallet_balance += amount\n",
+    "\n",
+    "    def show_balance(self):\n",
+    "        print(\"The balance in the wallet is\", self.wallet_balance)\n",
+    "\n",
+    "    def get_wallet_balance(self):\n",
+    "        return self.wallet_balance\n",
+    "    \n",
+    "    \n",
+    "cus_1 = Customer(\"C001\", \"Gavin\", 24, 1000)\n",
+    "print(cus_1.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_Customer__cust_id',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_wallet_balance',\n",
+       " 'age',\n",
+       " 'get_wallet_balance',\n",
+       " 'name',\n",
+       " 'show_balance',\n",
+       " 'update_balance']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(cus_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "oeii papaa ji!!!!!!!!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## getter and setter methods\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name = name\n",
+    "        self.__age = age\n",
+    "\n",
+    "    ## getter method\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "    \n",
+    "    ## setter method\n",
+    "    def set_name(self, name):\n",
+    "        self.__name = name\n",
+    "        \n",
+    "person1 = Person(\"John\", 30)\n",
+    "print(person1.get_name())\n",
+    "\n",
+    "person1.set_name(\"oeii papaa ji!!!!!!!!!!\")\n",
+    "print(person1.get_name())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Abstraction\n"
+   ]
   },
   {
    "cell_type": "code",
