--- a/python/test2.ipynb
+++ b/python/test2.ipynb
@@ -421,12 +421,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.53975\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Abstraction : abstract class\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "## Abstract class\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        return \"this is the abstract class and can be used by child-class\"\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14159 * self.radius ** 2\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "def calculate_total_area(shapes):\n",
+    "    \"\"\"\n",
+    "    Calculate the total area of a list of shapes using abstraction.\n",
+    "\n",
+    "    This function demonstrates the concept of abstraction in object-oriented programming.\n",
+    "    It takes a list of shape objects and calculates their total area without knowing\n",
+    "    the specific implementation details of each shape.\n",
+    "\n",
+    "    Args:\n",
+    "    shapes (list): A list of shape objects, each with an 'area()' method.\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The total area of all shapes in the list.\n",
+    "\n",
+    "    Raises:\n",
+    "    AttributeError: If any object in the list doesn't have an 'area()' method.\n",
+    "\n",
+    "    Example:\n",
+    "    >>> circle = Circle(5)\n",
+    "    >>> rectangle = Rectangle(4, 6)\n",
+    "    >>> calculate_total_area([circle, rectangle])\n",
+    "    102.14159\n",
+    "    \"\"\"\n",
+    "    total_area = 0\n",
+    "    for shape in shapes:\n",
+    "        total_area += shape.area()\n",
+    "    return total_area\n",
+    "\n",
+    "\n",
+    "circle = Circle(5)\n",
+    "print(circle.area())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vector (6, 8)\n",
+      "vector (4, 4)\n",
+      "vector (5, 12)\n",
+      "False\n",
+      "vector (5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## method overloading\n",
+    "class vector:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "        \n",
+    "    def __add__(self, other):\n",
+    "        return vector(self.x+other.x, self.y+other.y)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        return vector(self.x-other.x, self.y-other.y)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        return vector(self.x*other.x, self.y*other.y)\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.x==other.x and self.y==other.y\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "            return f\"vector ({self.x}, {self.y})\"\n",
+    "    \n",
+    "vec1 = vector(5, 6)\n",
+    "vec2 = vector(1, 2)\n",
+    "\n",
+    "print(vec1+vec2)\n",
+    "print(vec1-vec2)\n",
+    "print(vec1*vec2)\n",
+    "print(vec1==vec2)\n",
+    "print(vec1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Abstraction\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
