--- a/nlp/nlp_take1.ipynb
+++ b/nlp/nlp_take1.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1e1caf74",
+   "id": "77ea73a0",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b0fd0318",
+   "id": "4fe3233c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1f732223",
+   "id": "78de48b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "13995227",
+   "id": "b5ac4a5f",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,215 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1377aa1",
+   "id": "2e16193a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba7cf40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a6d4cace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Stemming : converting a word to it's base(without meaning)\n",
+    "words = ['going', 'go', 'gone', 'eat', 'ate', 'eating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "721ab616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## PorterStemmer\n",
+    "from nltk.stem import PorterStemmer\n",
+    "stemming = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d7d7a799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stemming of the going is --> go\n",
+      "stemming of the go is --> go\n",
+      "stemming of the gone is --> gone\n",
+      "stemming of the eat is --> eat\n",
+      "stemming of the ate is --> ate\n",
+      "stemming of the eating is --> eat\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ele in words:\n",
+    "    print(f\"stemming of the {ele} is --> {stemming.stem(ele)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e38d85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b6e9cc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## RegexStemmer\n",
+    "from nltk.stem import RegexpStemmer\n",
+    "regex_stemming = RegexpStemmer('ing$|s$|e$|able$', min=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b9383600",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eat'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regex_stemming.stem('eating')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28007fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ef7b03d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## SnowBall Stemmer : better than porterStemmer\n",
+    "from nltk.stem import SnowballStemmer\n",
+    "snowballstemmer = SnowballStemmer('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "989db8fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stemming of going is ---> go\n",
+      "stemming of go is ---> go\n",
+      "stemming of gone is ---> gone\n",
+      "stemming of eat is ---> eat\n",
+      "stemming of ate is ---> ate\n",
+      "stemming of eating is ---> eat\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words:\n",
+    "    print(f\"stemming of {word} is ---> {snowballstemmer.stem(word)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0be2867b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "porterStemmer : fairly ---> fairli\n",
+      "SnowballStemmer : fairly ---> fair\n"
+     ]
+    }
+   ],
+   "source": [
+    "## difference between the porterStemmer & SnowballStemmer\n",
+    "word = 'fairly'\n",
+    "print(f\"porterStemmer : {word} ---> {stemming.stem(word)}\")\n",
+    "print(f\"SnowballStemmer : {word} ---> {snowballstemmer.stem(word)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e928903",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e5786722",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'congratul'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Disadvantage of stemming : the base word doesn't necessarly have a meaning\n",
+    "stemming.stem('congratulation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07262511",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d2d83e",
    "metadata": {},
    "outputs": [],
    "source": []
