--- a/nlp/nlp_take1.ipynb
+++ b/nlp/nlp_take1.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "77ea73a0",
+   "id": "df201842",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4fe3233c",
+   "id": "182951f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "78de48b4",
+   "id": "6ba916b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b5ac4a5f",
+   "id": "6dc20c6e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e16193a",
+   "id": "d60bb26b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba7cf40",
+   "id": "371c54e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a6d4cace",
+   "id": "9cbae6f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "721ab616",
+   "id": "fec9bafe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d7d7a799",
+   "id": "85572049",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e38d85",
+   "id": "53097304",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b6e9cc8a",
+   "id": "f9c83b6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b9383600",
+   "id": "8e5c854c",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28007fe",
+   "id": "ae35341a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ef7b03d5",
+   "id": "4af44170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "989db8fb",
+   "id": "e2e5d667",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0be2867b",
+   "id": "dcbf25fd",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e928903",
+   "id": "1e504b06",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e5786722",
+   "id": "e619f780",
    "metadata": {},
    "outputs": [
     {
@@ -358,16 +358,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07262511",
+   "execution_count": 45,
+   "id": "9089917a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dc328155",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## lemmatization : convert the word to its 'root'\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer() "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d2d83e",
+   "id": "2b5b8295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "pos-tag:\n",
+    "noun - 'n'\n",
+    "verb - 'v'\n",
+    "adjactive - 'a'\n",
+    "adverb - 'r'\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7e3f3c36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'running'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmatizer.lemmatize('running', pos='n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1aa9fd16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'run'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmatizer.lemmatize('running', pos='v')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "7f957236",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "going ---> go\n",
+      "go ---> go\n",
+      "gone ---> go\n",
+      "eat ---> eat\n",
+      "ate ---> eat\n",
+      "eating ---> eat\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ele in words:\n",
+    "    print(f\"{ele} ---> {lemmatizer.lemmatize(ele, pos='v')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd62936",
    "metadata": {},
    "outputs": [],
    "source": []
